# how-to-c

./: CMakeLists.txt  LICENSE  README.md
res/: Three_little_pigs.txt
src/ds/: darray-use-like-cppvec.c  dyn_array_hold_static_array.c
src/io/: formatted_io.c  read_file_to_string.c
src/oop/: struct_with_union.c
